packages/webassemblyjs/test/fixtures/type-errors/tee-local/module.wast
(module (func $type-mixed-arg-num-vs-num (param f32) (local i32) (tee_local 1 (f32.const 0))))
